syntax = "proto3";

package agglayer.storage.v0;

import "agglayer/storage/v0/types.proto";
import "google/protobuf/timestamp.proto";

// Settlement job ID.
message SettlementJobId {
  // ULID byte sequence.
  bytes ulid = 1;
}

// Settlement job data.
message SettlementJob {
  // ----- Transaction details -----

  // Contract address to which to submit the transaction.
  Address contract_address = 1;

  // Transaction calldata.
  Calldata calldata = 2;

  // Eth value to send with the transaction.
  EthValue eth_value = 3;

  // ----- Job result details -----

  // Job result, if available.
  TxResult job_result = 4;

  // ----- Transaction parameters -----

  // Number of confirmations to wait for.
  uint32 num_confirmations = 5;

  // Ceiling for max fee per gas.
  Uint128 max_fee_per_gas_ceiling = 6;

  // Floor for max fee per gas.
  Uint128 max_fee_per_gas_floor = 7;

  // Percent increase for max fee per gas: each retry will multiply max fee per gas by N / 100.
  uint32 max_fee_per_gas_increase_percents = 8;

  // Ceiling for max priority fee per gas.
  Uint128 max_priority_fee_per_gas_ceiling = 9;

  // Floor for max priority fee per gas.
  Uint128 max_priority_fee_per_gas_floor = 10;

  // Percent increase for max priority fee per gas: each retry will multiply max priority fee per gas by N / 100.
  uint32 max_priority_fee_per_gas_increase_percents = 11;
}

// Transaction result.
message TxResult {
  // Transaction result.
  oneof result {
    // Error encountered while attempting to submit the transaction, that didn't lead to an on-chain result.
    ClientError client_error = 1;

    // Result of a successfully-executed contract call.
    ContractCallResult contract_call_result = 2;

    // Reorganized transactions get their result edited to be this.
    ReorganizedResult reorganized_result = 3;
  }
}

// Error encountered while attempting to submit the transaction, that didn't lead to an on-chain result.
message ClientError {
  // Type of error.
  ClientErrorType error_type = 1;

  // Error message.
  string error_message = 2;
}

// Type of client error.
enum ClientErrorType {
  // Unspecified error type.
  CLIENT_ERROR_TYPE_UNSPECIFIED = 0;

  // Network error.
  CLIENT_ERROR_TYPE_NETWORK_ERROR = 1;
}

// Result for a successfully-executed contract call.
message ContractCallResult {
  // The outcome of the contract call.
  ContractCallOutcome outcome = 1;

  // Additional metadata about the call outcome.
  bytes metadata = 2;
}

// On-chain outcome of the contract call.
enum ContractCallOutcome {
  // Unspecified outcome. This should never be used.
  CONTRACT_CALL_OUTCOME_UNSPECIFIED = 0;

  // The call was successful.
  CONTRACT_CALL_OUTCOME_SUCCESS = 1;

  // The call reverted.
  CONTRACT_CALL_OUTCOME_REVERTED = 2;
}

// Result indicating that the transaction's previous result was reorganized out of the chain.
message ReorganizedResult {
  // Date of the reorg detection.
  google.protobuf.Timestamp reorg_detection_time = 1;

  // Previous result, that was recorded before the reorg was detected.
  TxResult previous_result = 2;
}

// Sequence number of a settlement attempt within a settlement job.
message AttemptSequenceNumber {
  // Sequence number.
  uint64 number = 1;
}

// Contents of the settlement attempts CF.
message SettlementAttempt {
  // Sender wallet.
  Address sender_wallet = 1;

  // Nonce reserved for the transaction.
  Nonce nonce = 2;

  // Gas price parameters used for this attempt.
  Uint128 max_fee_per_gas = 3;

  // Gas price parameters used for this attempt.
  Uint128 max_priority_fee_per_gas = 4;

  // Hash of the submitted transaction.
  TxHash tx_hash = 5;

  // Result of the attempt, if available.
  TxResult result = 6;
}

// Contents of the settlement nonces CF.
message SettlementNonce {
  // ID of the job that reserved this nonce.
  SettlementJobId job_id = 1;

  // Sequence numbers of all of this job's settlement attempts that used this nonce.
  repeated AttemptSequenceNumber attempt_sequence_numbers = 2;
}
